fixing layout issues.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,7 @@ p {
 
 .card__image {
   width: 100%;
+  object-fit: cover;
 }
 
 .card__content {
